--- a/app/views/tops/index.html.slim
+++ b/app/views/tops/index.html.slim
@@ -6,6 +6,9 @@ section.hero.is-medium
         |「トイレの紙様」は従来全くやりとりが行われなかったトイレにおいて
         br
         |  内外からのアクセスを可能にした次世代型双方向トイレコミュニケーションツールです。
+      = link_to new_user_path, class: 'button is-white is-medium is-inverted' do
+        |トイレ登録&ensp;
+        i.fas.fa-toilet
 section#parallax-1.hero.is-large
   .hero-body
     .container
@@ -30,7 +33,7 @@ section#parallax-3.hero.is-large
           h1.title.is-1 中と外でつながるトイレ
           hr.content-divider/
           h2.subtitle 中と外でのトイレコミュニケーションによっていつでも繋がれます。
-footer.footer
+footer.footer.top
   .content.has-text-centered
     p
       strong トイレの紙様　
