--- a/app/assets/builds/application.css
+++ b/app/assets/builds/application.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+@import url("https://fonts.googleapis.com/css?family=Nunito:400,700");
 /*! bulma.io v0.9.3 | MIT License | github.com/jgthms/bulma */
 /* Bulma Utilities */
 .pagination-previous,
@@ -10320,16 +10321,16 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
   border-top: 10px solid turquoise;
 }
 
-footer {
+footer.top {
   color: white;
   background: rgb(14, 14, 14) !important;
 }
 
-footer strong {
+footer.top strong {
   color: turquoise;
 }
 
-footer a {
+footer.top a {
   color: turquoise;
 }
 
@@ -10391,16 +10392,76 @@ hr.content-divider {
   background: hotpink;
 }
 
-.label {
-  color: white;
+html, body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+  background: #F2F6FA;
 }
 
-input {
-  background: transparent !important;
-  border: 1px solid turquoise !important;
-  color: white !important;
+footer {
+  background-color: #F2F6FA !important;
 }
 
-input::placeholder {
-  color: white !important;
+.topNav {
+  border-top: 5px solid #3498DB;
+}
+
+.topNav .container {
+  border-bottom: 1px solid #E6EAEE;
+}
+
+.container .columns {
+  margin: 3rem 0;
+}
+
+.navbar-menu .navbar-item {
+  padding: 0 2rem;
+}
+
+aside.menu {
+  padding-top: 3rem;
+}
+
+aside.menu .menu-list {
+  line-height: 1.5;
+}
+
+aside.menu .menu-label {
+  padding-left: 10px;
+  font-weight: 700;
+}
+
+.button.is-primary.is-alt {
+  background: #00c6ff;
+  background: -webkit-linear-gradient(to bottom, #0072ff, #00c6ff);
+  background: linear-gradient(to bottom, #0072ff, #00c6ff);
+  font-weight: 700;
+  font-size: 14px;
+  height: 3rem;
+  line-height: 2.8;
+}
+
+.media-left img {
+  border-radius: 50%;
+}
+
+.media-content p {
+  font-size: 14px;
+  line-height: 2.3;
+  font-weight: 700;
+  color: #8F99A3;
+}
+
+article.post {
+  margin: 1rem;
+  padding-bottom: 1rem;
+  border-bottom: 1px solid #E6EAEE;
+}
+
+article.post:last-child {
+  padding-bottom: 0;
+  border-bottom: none;
+}
+
+.menu-list li {
+  padding: 5px;
 }
