--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -6,9 +6,10 @@ html
     title トイレの紙様
     = csrf_meta_tags
     = csp_meta_tag
+    = stylesheet_link_tag 'https://use.fontawesome.com/releases/v5.6.1/css/all.css'
     = stylesheet_link_tag "application", "data-turbo-track": "reload"
     = javascript_include_tag "application", "data-turbo-track": "reload", defer: true
   body
-    section.section
-      .container
+    = render 'shared/header'
+    section.container
         = yield
