--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -11,21 +11,9 @@ nav.navbar.is-white.topNav
       .navbar-end
         .navbar-item
           .field.is-grouped
-            - if logged_in?
+            - if  request.fullpath =~ /^\/manager/
               p.control
                 = link_to user_session_path, data: { turbo_method: :delete }, class: 'button is-small is-danger is-outlined' do
                   span.icon
                     i.fa.fa-sign-out-alt
                   span ログアウト
-            - else
-              p.control
-                a.button.is-small
-                  span.icon
-                    i.fa.fa-user-plus
-                  span
-                    | Register
-              p.control
-                a.button.is-small.is-info.is-outlined
-                  span.icon
-                    i.fa.fa-user
-                  span Login
